gpu-pruner/hack/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: gpu-pruner
  namespace: gpu-pruner-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gpu-pruner
  template:
    metadata:
      labels:
        app: gpu-pruner
    spec:
      serviceAccountName: gpu-pruner
      containers:
        - name: container
          image: 'ghcr.io/wseaton/gpu-pruner:latest-otel'
          args:
            - 'gpu-pruner'
            - '-d'
            - '--run-mode=scale-down'
            - '--prometheus-url=http://thanos-querier.openshift-monitoring.svc.cluster.local'
            - '--dashboard-port=8080'
          ports:
            - containerPort: 8080
              name: dashboard
              protocol: TCP
          resources:
            limits:
              cpu: 500m
              memory: 128Mi
            requests:
              cpu: 250m
              memory: 64Mi
          imagePullPolicy: Always
      restartPolicy: Always
