gpu-pruner/hack/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: gpu-pruner-dashboard
  namespace: gpu-pruner-system
  labels:
    app: gpu-pruner
spec:
  type: ClusterIP
  selector:
    app: gpu-pruner
  ports:
    - name: dashboard
      protocol: TCP
      port: 8080
      targetPort: 8080
    - name: slack-interact
      protocol: TCP
      port: 3002
      targetPort: 3002
