gpu-pruner/hack/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: gpu-pruner-dashboard
  namespace: gpu-pruner-system
  labels:
    app: gpu-pruner
spec:
  to:
    kind: Service
    name: gpu-pruner-dashboard
    weight: 100
  port:
    targetPort: dashboard
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
